<?xml version="1.0"?>
<package format="3">
  <name>lidar_to_pcd</name>
  <version>0.0.0</version>
  <description>Package for converting Lidar data to PCD format</description>
  <maintainer email="hamadieh.athir.q4@dc.tohoku.ac.jp">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <build_depend>pcl_conversions</build_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


